Version 6.22.4 - 9 March 2009

- change installer API (in order to fix detecting whether installing ackages
  succedded or not)

Version 6.22.3 - 5 March 2009

- urpmi
  o fix verifying packages signatures in chrooted environments (especially
    important for installer where there's no rpmdb in / (really /var/lib/rpm)
    and thus no keys to check against)

Version 6.22.2 - 4 March 2009

- close another fd leak (needed for drakx)

Version 6.22.1 - 4 March 2009

- explicitely close the RPM DB on comleting transaction (needed for drakx)

Version 6.22 - 3 March 2009

- drop support for /etc/urpmi/media.d/*.cfg
  (was partially broken, non documented and hopefully unused)
- add more callbacks for installer
- fix reading descriptions with --env=
- only load LDAP binding if needed (saves a couple MB in rpmdrake)
- gurpmi:
  o warn when rebooting is needed after installing packages

Version 6.21 - 13 January 2009

- drop urpmi.recover 
  (no more possible with rpm 4.6 which doesn't handle --repackage)

Version 6.20 - 13 January 2009

- urpmi
  o --auto: do not prompt for "retry" on aria2 download failure
    (regression introduced in 6.18)
  o add aria2 to the priority list of packages that need to be updated
    before restarting urpmi
  o fix issue with urpmi sometimes using the wrong key when checking 
    signatures when the same package is available from different media
  o remove packages from installed-through-deps.list when they are explicitly
    requested using urpmi (even if they were already installed) (#45054)
- urpmi_rpm-find-leaves
  o do not list suggested packages as unrequested packages (#46326)
- urpmq
  o fix urpmq -i on local RPMs

Version 6.19 - 24 November 2008

- urpmi
  o in --auto, do display an error message when rpms are missing
  o in --auto, do not allow to install a package substring match
    (you can use -a to force it)
  o revert --auto-update behaviour in case of media update failures (#45417)