@@ -1,3 +1,6 @@
+- fix a circular reference that was causing rpmdb to be opened many
+  times in installer
+
 Version 6.22.4 - 9 March 2009
 
 - change installer API (in order to fix detecting whether installing ackages
